[package]
name = "rodepush-cli"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI tool for building and uploading React Native bundles to RodePush"

[[bin]]
name = "rodepush"
path = "src/main.rs"

[dependencies]
# Core functionality
rodepush-core = { path = "../rodepush-core" }

# CLI
clap.workspace = true
indicatif.workspace = true

# HTTP client
reqwest.workspace = true

# Async
tokio.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
toml.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# File operations
tempfile.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio-test = "0.4"