[package]
name = "rodepush-core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core functionality for RodePush - React Native CodePush solution"

[dependencies]
# Async
tokio.workspace = true
futures.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# UUID and time
uuid.workspace = true
chrono.workspace = true

# Crypto and hashing
sha2.workspace = true
blake3.workspace = true

# Compression
zstd.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

hex = "0.4"
subtle = "2.5"
tempfile.workspace = true
mockall.workspace = true
tokio-test = "0.4"