[package]
name = "rodepush-core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core functionality for RodePush - React Native CodePush solution"

[dependencies]
# Async
tokio.workspace = true
futures.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# UUID and time
uuid.workspace = true
chrono.workspace = true

# Crypto and hashing
sha2.workspace = true
blake3.workspace = true

# Compression
zstd.workspace = true
flate2.workspace = true
brotli.workspace = true
tar = "^0.4.44"

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# File system utilities
walkdir = "^2.5.0"
mime_guess = "^2.0.5"

# Async traits
async-trait = "^0.1.88"

hex.workspace = true
subtle.workspace = true
tempfile.workspace = true
mockall.workspace = true
tokio-test = "^0.4.4"

[dependencies.similar]
version = "^2.7.0"
features = ["inline"]
