[package]
name = "rodepush-server"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Server for managing React Native bundle distribution and differential updates"

[[bin]]
name = "rodepush-server"
path = "src/main.rs"

[dependencies]
# Core functionality
rodepush-core = { path = "../rodepush-core" }

# HTTP server
axum.workspace = true
tower.workspace = true
tower-http.workspace = true

# Database
sqlx.workspace = true

# Cache
redis.workspace = true

# Async
tokio.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
toml.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Async traits
async-trait.workspace = true

# UUID and time
uuid.workspace = true
chrono.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio-test = "^0.4.4"
serial_test = "^3.2.0"